--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,39 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.centralenantes</groupId>
     <artifactId>PAPPL</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.target>16</maven.compiler.target>   
     </properties>
+<build>
+       <plugins>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.4</version>
+                <executions>
+                    <execution>
+                    <phase>package</phase>
+                    <goals>
+                    <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>edu.centralenantes.pappl.Test</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                         <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+       </plugins>
+</build>
 </project>
